fix(resources): update french json encoding to UTF-8

--- a/src/Application/Resources/Languages/lang.fr.json
+++ b/src/Application/Resources/Languages/lang.fr.json
@@ -1,12 +1,12 @@
-{
+ï»¿{
   "MainMenuTitle": "=== EasySave V1.0 ===",
   "MenuOptionList": "1. Lister les travaux de sauvegarde",
-  "MenuOptionCreate": "2. Créer un travail de sauvegarde",
-  "MenuOptionExecute": "3. Exécuter un ou plusieurs travaux",
+  "MenuOptionCreate": "2. CrÃ©er un travail de sauvegarde",
+  "MenuOptionExecute": "3. ExÃ©cuter un ou plusieurs travaux",
   "MenuOptionModify": "4. Modifier un travail de sauvegarde",
   "MenuOptionDelete": "5. Supprimer un travail de sauvegarde",
   "MenuOptionLang": "6. Change Language / Langue",
   "MenuOptionExit": "7. Quitter",
-  "MenuPrompt": "\nSélectionnez une option : ",
-  "ErrorInvalidOption": "Option invalide. Veuillez réessayer."
+  "MenuPrompt": "\nSÃ©lectionnez une option : ",
+  "ErrorInvalidOption": "Option invalide. Veuillez rÃ©essayer."
 }
