--- a/src/Application/Resources/Languages/lang.fr.json
+++ b/src/Application/Resources/Languages/lang.fr.json
@@ -17,7 +17,10 @@
   "AskJobNameToDelete": "Saisissez le nom du job que vous voulez supprimer.",
   "JobDeletedSuccess": "Job supprimé",
   "AskJobNameToUpdate": "Quel job voulez vous modifier ?",
-  "JobUpdatedSuccess": "Job créé"
+  "JobUpdatedSuccess": "Job créé",
+  "AskJobsToExecute": "Quels jobs souhaitez vous exécuter ?",
+  "ExecuteHelp":  "Deux jobs séparés par un - : Exécution des jobs compris entre le premier jobs donné et le dexième jobs donné (jobs donnés inclus) \nPlusieurs jobs séparés par un ; : Exécutions des jobs listés"
+
 
 
 }
