--- a/src/Application/Resources/Languages/lang.en.json
+++ b/src/Application/Resources/Languages/lang.en.json
@@ -18,6 +18,8 @@
   "JobDeletedSuccess": "Job deleted",
   "AskJobNameToUpdate": "Which job do you want to update",
   "JobUpdatedSuccess": "Job created",
+  "JobListTitle": "Available backup jobs",
+  "NoJobsFound": "No backup jobs found.",
    "AskJobsToExecute": "Which job do you want to execute ?",
   "ExecuteHelp":  "Two jobs separated by a hyphen (-): execution of the jobs between the first given job and the second given job (given jobs included). \nMultiple jobs separated by a semicolon (;): execution of the listed jobs."
 }
