--- a/src/Application/Resources/Languages/lang.en.json
+++ b/src/Application/Resources/Languages/lang.en.json
@@ -14,12 +14,14 @@
   "AskTargetPath": "Insert target path.",
   "AskJobType": "Insert Job type (0 for full 1 for Differential)",
   "JobCreatedSuccess": "Job Created",
-  "AskJobNameToDelete": "Insert the name of the job you want to delete.",
+  "AskJobNameToDelete": "Enter the ID of the job you want to delete.",
   "JobDeletedSuccess": "Job deleted",
-  "AskJobNameToUpdate": "Which job do you want to update",
+  "AskJobNameToUpdate": "Enter the ID of the job you want to update.",
   "JobUpdatedSuccess": "Job created",
   "JobListTitle": "Available backup jobs",
   "NoJobsFound": "No backup jobs found.",
-   "AskJobsToExecute": "Which job do you want to execute ?",
-  "ExecuteHelp":  "Two jobs separated by a hyphen (-): execution of the jobs between the first given job and the second given job (given jobs included). \nMultiple jobs separated by a semicolon (;): execution of the listed jobs."
+   "AskJobsToExecute": "Which job IDs do you want to execute?",
+  "ExecuteHelp":  "Two IDs separated by a hyphen (-): execute all jobs between those IDs (included). \nMultiple IDs separated by a semicolon (;): execute only the listed IDs.",
+  "ErrorJobNotFound": "No job found for this ID.",
+  "ErrorInvalidRange": "Invalid ID range."
 }
