--- a/src/Application/Resources/Languages/lang.en.json
+++ b/src/Application/Resources/Languages/lang.en.json
@@ -24,5 +24,72 @@
   "AskJobsToExecute": "Which job IDs do you want to execute?",
   "ExecuteHelp": "Two IDs separated by a hyphen (-): execute all jobs between those IDs (included). \nMultiple IDs separated by a semicolon (;): execute only the listed IDs.",
   "ErrorJobNotFound": "No job found for this ID.",
-  "ErrorInvalidRange": "Invalid ID range."
+  "ErrorInvalidRange": "Invalid ID range.",
+
+  "GuiWindowTitle": "EasySave",
+  "GuiJobsHeaderTitle": "Backup jobs",
+  "GuiExecuteSelected": "Run selection",
+  "GuiExecuteAll": "Run all",
+  "GuiDeleteSelected": "Delete selection",
+  "GuiLanguageLabel": "Language",
+  "GuiLogFormatLabel": "Log format",
+  "GuiLogFormatJson": "Json",
+  "GuiLogFormatXml": "Xml",
+
+  "GuiHeaderName": "Name",
+  "GuiHeaderSource": "Source",
+  "GuiHeaderDestination": "Destination",
+  "GuiHeaderType": "Type",
+
+  "GuiSectionCreateEdit": "Create / edit",
+  "GuiLabelName": "Name",
+  "GuiLabelSourceFolder": "Source folder",
+  "GuiLabelDestinationFolder": "Destination folder",
+  "GuiLabelType": "Type",
+  "GuiBrowse": "Browse",
+  "GuiCreate": "Create",
+  "GuiUpdate": "Update",
+
+  "GuiJobTypeFull": "Full",
+  "GuiJobTypeDifferential": "Differential",
+
+  "GuiNewJobButton": "New job",
+  "GuiEditJobButton": "Edit job",
+  "GuiEditorWindowTitleNew": "New backup job",
+  "GuiEditorWindowTitleEdit": "Edit job",
+  "GuiSave": "Save",
+  "GuiCancel": "Cancel",
+
+  "GuiPickSourceTitle": "Choose source folder",
+  "GuiPickDestinationTitle": "Choose destination folder",
+
+  "GuiStatusCreatingJob": "Creating job...",
+  "GuiStatusUpdatingJob": "Updating job...",
+  "GuiStatusDeleting": "Deleting...",
+  "GuiStatusExecuting": "Executing...",
+  "GuiStatusEditModeHint": "Edit mode: change fields then click Update.",
+
+  "GuiErrorSelectSingleToEdit": "Select one job to edit.",
+  "GuiErrorNoJobSelected": "No job selected.",
+  "GuiErrorNoJobToExecute": "No job to execute.",
+  "GuiErrorInvalidSelection": "Invalid selection.",
+
+  "GuiStatusDeletedCount": "{0} job(s) deleted.",
+  "GuiStatusDeletedWithErrors": "{0} deleted, {1} error(s): {2}",
+  "GuiStatusExecutionSummary": "{0} job(s) executed: {1} completed, {2} error(s).",
+
+  "GuiJobDetailsTitle": "Job Details",
+  "GuiJobDetailsNoSelection": "Select a job to see its details",
+  "GuiJobDetailsStatus": "Status",
+  "GuiJobDetailsProgress": "Progress",
+  "GuiJobDetailsTotalFiles": "Total files",
+  "GuiJobDetailsFilesRemaining": "Files remaining",
+  "GuiJobDetailsTotalSize": "Total size",
+  "GuiJobDetailsSizeRemaining": "Size remaining",
+  "GuiJobDetailsCurrentFile": "Current file",
+  "GuiJobDetailsLastUpdate": "Last update",
+  "GuiStatusInactive": "Inactive",
+  "GuiStatusActive": "Active",
+  "GuiStatusCompleted": "Completed",
+  "GuiStatusError": "Error"
 }
