--- a/src/Application/Resources/Languages/lang.fr.json
+++ b/src/Application/Resources/Languages/lang.fr.json
@@ -35,6 +35,8 @@
   "GuiLogFormatLabel": "Format des logs",
   "GuiLogFormatJson": "Json",
   "GuiLogFormatXml": "Xml",
+  "GuiSettingsButton": "Parametres",
+  "GuiSettingsMenuTitle": "Parametres du logiciel",
 
   "GuiHeaderName": "Nom",
   "GuiHeaderSource": "Source",
