--- a/src/Application/Resources/Languages/lang.fr.json
+++ b/src/Application/Resources/Languages/lang.fr.json
@@ -10,24 +10,24 @@
   "MenuOptionExit": "8. Quitter",
   "MenuPrompt": "\nSélectionnez une option : ",
   "ErrorInvalidOption": "Option invalide. Veuillez réessayer.",
-  "AskJobName": "Saisissez le nom du job.",
+  "AskJobName": "Saisissez le nom du travail.",
   "AskSrcPath": "Saisissez le chemin d'origine.",
   "AskTargetPath": "Saisissez le chemin vers lequel vous voulez sauvegarder.",
-  "AskJobType": "Saisissez le type de job (0 pour Complète, 1 pour Differentielle)",
-  "JobCreatedSuccess": "Job Créé",
-  "AskJobNameToDelete": "Saisissez l'ID du job que vous voulez supprimer.",
-  "JobDeletedSuccess": "Job supprimé",
-  "AskJobNameToUpdate": "Saisissez l'ID du job que vous voulez modifier.",
-  "JobUpdatedSuccess": "Job créé",
-  "JobListTitle": "Jobs de sauvegarde disponibles",
-  "NoJobsFound": "Aucun job de sauvegarde trouvé.",
-  "AskJobsToExecute": "Quels IDs de jobs souhaitez vous exécuter ?",
-  "ExecuteHelp": "Deux IDs séparés par un - : exécute tous les jobs entre ces deux IDs (inclus). \nPlusieurs IDs séparés par un ; : exécute uniquement les IDs listés.",
-  "ErrorJobNotFound": "Job introuvable pour cet ID.",
+  "AskJobType": "Saisissez le type de travail (0 pour Complète, 1 pour Differentielle)",
+  "JobCreatedSuccess": "Travail Créé",
+  "AskJobNameToDelete": "Saisissez l'ID du travail que vous voulez supprimer.",
+  "JobDeletedSuccess": "Travail supprimé",
+  "AskJobNameToUpdate": "Saisissez l'ID du travail que vous voulez modifier.",
+  "JobUpdatedSuccess": "Travail créé",
+  "JobListTitle": "Travaux de sauvegarde disponibles",
+  "NoJobsFound": "Aucun travail de sauvegarde trouvé.",
+  "AskJobsToExecute": "Quels IDs de travaux souhaitez vous exécuter ?",
+  "ExecuteHelp": "Deux IDs séparés par un - : exécute tous les travaux entre ces deux IDs (inclus). \nPlusieurs IDs séparés par un ; : exécute uniquement les IDs listés.",
+  "ErrorJobNotFound": "Travail introuvable pour cet ID.",
   "ErrorInvalidRange": "Plage d'IDs invalide.",
 
   "GuiWindowTitle": "EasySave",
-  "GuiJobsHeaderTitle": "Jobs de sauvegarde",
+  "GuiJobsHeaderTitle": "Travaux de sauvegarde",
   "GuiExecuteSelected": "Exécuter la sélection",
   "GuiExecuteAll": "Exécuter tout",
   "GuiDeleteSelected": "Supprimer la sélection",
@@ -37,8 +37,8 @@
   "GuiLogFormatXml": "Xml",
   "GuiBusinessSoftwareLabel": "Logiciel métier à bloquer",
   "GuiCryptoExtensionsLabel": "Extensions de fichiers à chiffrer (séparées par des virgules)",
-  "GuiSettingsButton": "Parametres",
-  "GuiSettingsMenuTitle": "Parametres du logiciel",
+  "GuiSettingsButton": "Paramètres",
+  "GuiSettingsMenuTitle": "Paramètres du logiciel",
 
   "GuiHeaderName": "Nom",
   "GuiHeaderSource": "Source",
@@ -57,33 +57,34 @@
   "GuiJobTypeFull": "Complète",
   "GuiJobTypeDifferential": "Différentielle",
 
-  "GuiNewJobButton": "Nouveau job",
-  "GuiEditJobButton": "Modifier le job",
-  "GuiEditorWindowTitleNew": "Nouveau job de sauvegarde",
-  "GuiEditorWindowTitleEdit": "Modifier le job",
+  "GuiNewJobButton": "Nouveau travail",
+  "GuiEditJobButton": "Modifier le travail",
+  "GuiEditorWindowTitleNew": "Nouveau travail de sauvegarde",
+  "GuiEditorWindowTitleEdit": "Modifier le travail",
   "GuiSave": "Sauvegarder",
   "GuiCancel": "Annuler",
 
   "GuiPickSourceTitle": "Choisir le dossier source",
   "GuiPickDestinationTitle": "Choisir le dossier destination",
 
-  "GuiStatusCreatingJob": "Création du job...",
-  "GuiStatusUpdatingJob": "Modification du job...",
+  "GuiStatusCreatingJob": "Création du travail...",
+  "GuiStatusUpdatingJob": "Modification du travail...",
   "GuiStatusDeleting": "Suppression...",
   "GuiStatusExecuting": "Exécution...",
   "GuiStatusEditModeHint": "Mode modification : changez les champs puis cliquez sur Modifier.",
 
-  "GuiErrorSelectSingleToEdit": "Sélectionnez un job (un seul) pour modifier.",
-  "GuiErrorNoJobSelected": "Aucun job sélectionné.",
-  "GuiErrorNoJobToExecute": "Aucun job à exécuter.",
+  "GuiErrorSelectSingleToEdit": "Sélectionnez un travail (un seul) pour modifier.",
+  "GuiErrorNoJobSelected": "Aucun travail sélectionné.",
+  "GuiErrorNoJobToExecute": "Aucun travail à exécuter.",
   "GuiErrorInvalidSelection": "Sélection invalide.",
+  "GuiErrorJobNameEmpty": "Le nom du travail ne peut pas être vide.",
 
   "GuiStatusDeletedCount": "{0} job(s) supprimé(s).",
   "GuiStatusDeletedWithErrors": "{0} supprimé(s), {1} erreur(s) : {2}",
   "GuiStatusExecutionSummary": "{0} job(s) exécuté(s) : {1} terminé(s), {2} erreur(s).",
 
-  "GuiJobDetailsTitle": "Détails du job",
-  "GuiJobDetailsNoSelection": "Sélectionnez un job pour voir ses détails",
+  "GuiJobDetailsTitle": "Détails du travail",
+  "GuiJobDetailsNoSelection": "Sélectionnez un travail pour voir ses détails",
   "GuiJobDetailsStatus": "Statut",
   "GuiJobDetailsProgress": "Progression",
   "GuiJobDetailsTotalFiles": "Fichiers totaux",
@@ -97,19 +98,19 @@
   "GuiStatusCompleted": "Terminé",
   "GuiStatusError": "Erreur",
   "GuiCatWidgetTitle": "Chat assistant",
-  "GuiCatMessageNoSelection": "Selectionnez un job et je vous montre son suivi.",
-  "GuiCatMessageSelected": "Le job \"{0}\" est pret. Miaou.",
-  "GuiCatMessageCreating": "Je prepare la creation du job.",
-  "GuiCatMessageCreated": "Job \"{0}\" cree avec succes.",
-  "GuiCatMessageUpdating": "Je mets le job a jour.",
-  "GuiCatMessageUpdated": "Job \"{0}\" mis a jour.",
-  "GuiCatMessageDeleting": "Je supprime les jobs selectionnes.",
+  "GuiCatMessageNoSelection": "Selectionnez un travail et je vous montre son suivi.",
+  "GuiCatMessageSelected": "Le travail \"{0}\" est pret. Miaou.",
+  "GuiCatMessageCreating": "Je prépare la creation du travail.",
+  "GuiCatMessageCreated": "Travail \"{0}\" créé avec succes.",
+  "GuiCatMessageUpdating": "Je mets le travail a jour.",
+  "GuiCatMessageUpdated": "Travail \"{0}\" mis a jour.",
+  "GuiCatMessageDeleting": "Je supprime les travaux selectionnés.",
   "GuiCatMessageDeleted": "{0} job(s) supprime(s).",
-  "GuiCatMessageDeleteWithErrors": "Suppression terminee avec {0} erreur(s).",
-  "GuiCatMessageExecuting": "Execution des jobs en cours.",
-  "GuiCatMessageExecutedSuccess": "{0} job(s) execute(s) avec succes.",
-  "GuiCatMessageExecutedWithErrors": "Execution terminee avec {0} erreur(s).",
+  "GuiCatMessageDeleteWithErrors": "Suppression terminée avec {0} erreur(s).",
+  "GuiCatMessageExecuting": "Execution des travaux en cours.",
+  "GuiCatMessageExecutedSuccess": "{0} job(s) executé(s) avec succes.",
+  "GuiCatMessageExecutedWithErrors": "Execution terminée avec {0} erreur(s).",
   "GuiCatMessageActionFailed": "Oups, action echouee: {0}",
-  "GuiCatMessageNoJobToRun": "Aucun job a executer.",
-  "GuiCatMessageInvalidSelection": "Selection invalide, verifie les jobs choisis."
+  "GuiCatMessageNoJobToRun": "Aucun travail a executer.",
+  "GuiCatMessageInvalidSelection": "Sélection invalide, vérifie les travaux choisis."
 }
