fix: maj cat notification

--- a/src/Application/Resources/Languages/lang.en.json
+++ b/src/Application/Resources/Languages/lang.en.json
@@ -98,16 +98,20 @@
   "GuiStatusCompleted": "Completed",
   "GuiStatusError": "Error",
   "GuiCatWidgetTitle": "Assistant cat",
-  "GuiCatMessageNoSelection": "Select a job and I will show its live status.",
-  "GuiCatMessageSelected": "Job \"{0}\" is ready. Meow.",
-  "GuiCatMessageCreating": "Preparing job creation.",
+  "GuiCatMessageNoSelection": "Select a job to display live tracking.",
+  "GuiCatMessageSelected": "Job \"{0}\" is ready. You can run it now.",
+  "GuiCatMessageSelectedRunning": "Job \"{0}\" is currently running.",
+  "GuiCatMessageCreating": "Creating job...",
   "GuiCatMessageCreated": "Job \"{0}\" created successfully.",
-  "GuiCatMessageUpdating": "Updating the selected job.",
+  "GuiCatMessageUpdating": "Updating job...",
   "GuiCatMessageUpdated": "Job \"{0}\" updated.",
   "GuiCatMessageDeleting": "Deleting selected jobs.",
+  "GuiCatMessageDeletingCount": "Deleting {0} selected job(s)...",
   "GuiCatMessageDeleted": "{0} job(s) deleted.",
-  "GuiCatMessageDeleteWithErrors": "Delete completed with {0} error(s).",
+  "GuiCatMessageDeleteWithErrors": "Deletion completed with {0} error(s).",
   "GuiCatMessageExecuting": "Running backup jobs now.",
+  "GuiCatMessageExecutingAll": "Running all jobs now ({0} total)...",
+  "GuiCatMessageExecutingSelected": "Running selected jobs now ({0})...",
   "GuiCatMessageExecutedSuccess": "{0} job(s) executed successfully.",
   "GuiCatMessageExecutedWithErrors": "Execution completed with {0} error(s).",
   "GuiCatMessageActionFailed": "Action failed: {0}",
