--- a/src/Application/Resources/Languages/lang.fr.json
+++ b/src/Application/Resources/Languages/lang.fr.json
@@ -98,19 +98,23 @@
   "GuiStatusCompleted": "Terminé",
   "GuiStatusError": "Erreur",
   "GuiCatWidgetTitle": "Chat assistant",
-  "GuiCatMessageNoSelection": "Selectionnez un travail et je vous montre son suivi.",
-  "GuiCatMessageSelected": "Le travail \"{0}\" est pret. Miaou.",
-  "GuiCatMessageCreating": "Je prépare la creation du travail.",
-  "GuiCatMessageCreated": "Travail \"{0}\" créé avec succes.",
-  "GuiCatMessageUpdating": "Je mets le travail a jour.",
-  "GuiCatMessageUpdated": "Travail \"{0}\" mis a jour.",
-  "GuiCatMessageDeleting": "Je supprime les travaux selectionnés.",
-  "GuiCatMessageDeleted": "{0} job(s) supprime(s).",
+  "GuiCatMessageNoSelection": "Selectionnez un travail pour afficher son suivi en direct.",
+  "GuiCatMessageSelected": "Le travail \"{0}\" est prêt. Vous pouvez le lancer.",
+  "GuiCatMessageSelectedRunning": "Le travail \"{0}\" est en cours d'execution.",
+  "GuiCatMessageCreating": "Creation du travail en cours...",
+  "GuiCatMessageCreated": "Travail \"{0}\" créé avec succès.",
+  "GuiCatMessageUpdating": "Mise à jour du travail en cours...",
+  "GuiCatMessageUpdated": "Travail \"{0}\" mis à jour.",
+  "GuiCatMessageDeleting": "Suppression des travaux sélectionnés.",
+  "GuiCatMessageDeletingCount": "Suppression de {0} travail(x) en cours...",
+  "GuiCatMessageDeleted": "{0} travail(x) supprimé(s).",
   "GuiCatMessageDeleteWithErrors": "Suppression terminée avec {0} erreur(s).",
-  "GuiCatMessageExecuting": "Execution des travaux en cours.",
-  "GuiCatMessageExecutedSuccess": "{0} job(s) executé(s) avec succes.",
-  "GuiCatMessageExecutedWithErrors": "Execution terminée avec {0} erreur(s).",
-  "GuiCatMessageActionFailed": "Oups, action echouee: {0}",
-  "GuiCatMessageNoJobToRun": "Aucun travail a executer.",
-  "GuiCatMessageInvalidSelection": "Sélection invalide, vérifie les travaux choisis."
+  "GuiCatMessageExecuting": "Exécution des travaux en cours.",
+  "GuiCatMessageExecutingAll": "Exécution de tous les travaux ({0}) en cours...",
+  "GuiCatMessageExecutingSelected": "Exécution de la sélection ({0} travail(x)) en cours...",
+  "GuiCatMessageExecutedSuccess": "{0} travail(x) exécuté(s) avec succès.",
+  "GuiCatMessageExecutedWithErrors": "Exécution terminée avec {0} erreur(s).",
+  "GuiCatMessageActionFailed": "Action impossible : {0}",
+  "GuiCatMessageNoJobToRun": "Aucun travail à exécuter.",
+  "GuiCatMessageInvalidSelection": "Sélection invalide, vérifiez les travaux choisis."
 }
