feat: Add delete confirmation

--- a/src/Application/Resources/Languages/lang.en.json
+++ b/src/Application/Resources/Languages/lang.en.json
@@ -31,6 +31,10 @@
   "GuiExecuteSelected": "Run selection",
   "GuiExecuteAll": "Run all",
   "GuiDeleteSelected": "Delete selection",
+  "GuiDeleteConfirmTitle": "Confirm deletion",
+  "GuiDeleteConfirmMessage": "Are you sure you want to delete {0} job(s)?",
+  "GuiDeleteConfirmYes": "Delete",
+  "GuiDeleteConfirmNo": "Cancel",
   "GuiLanguageLabel": "Language",
   "GuiLogFormatLabel": "Log format",
   "GuiLogFormatJson": "Json",
