--- a/src/Application/Resources/Languages/lang.fr.json
+++ b/src/Application/Resources/Languages/lang.fr.json
@@ -31,6 +31,10 @@
   "GuiExecuteSelected": "Exécuter la sélection",
   "GuiExecuteAll": "Exécuter tout",
   "GuiDeleteSelected": "Supprimer la sélection",
+  "GuiDeleteConfirmTitle": "Confirmer la suppression",
+  "GuiDeleteConfirmMessage": "Voulez-vous vraiment supprimer {0} job(s) ?",
+  "GuiDeleteConfirmYes": "Supprimer",
+  "GuiDeleteConfirmNo": "Annuler",
   "GuiLanguageLabel": "Langue",
   "GuiLogFormatLabel": "Format des logs",
   "GuiLogFormatJson": "Json",
